--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ body {
 header {
     display: flex;
     font-family: "Lucida Console", "Courier New", monospace;
-    list-style-type: none;
     background-color: aquamarine;
 }
 
@@ -17,3 +16,17 @@ header nav ul li {
     display: inline-block;
 }
 
+footer {
+    display: flex;
+    font-family: "Lucida Console", "Courier New", monospace;
+    background-color: aquamarine;
+    flex-wrap: wrap;
+}
+
+footer ul {
+    list-style-type: none;
+}
+
+footer ul li {
+    display: inline-block
+}
