--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,35 @@ body {
 
 header {
     display: flex;
-    font-family: "Lucida Console", "Courier New", monospace;
-    background-color: aquamarine;
+    font-family: "Verdana", "Helvetica", sans-serif;
+    background-color: #31343D;
+    margin: 0px;
+    padding: 0px;
+    justify-content: space-between;
+    color: #31343D;
 }
 
-header nav ul {
+header h1 {
+    margin: 10px 20% 10px 0px;
+    padding: 10px 10px 10px 8%;
+    background-color: #92CCCE;
+    font-size: 25px;
+}
+
+header nav {
+    align-self: center;
+    padding: 10px;
+}
+
+header ul {
     list-style-type: none;
+    font-size: 12px;
+    color: #92CCCE
 }
 
-header nav ul li {
+header ul li {
     display: inline-block;
+    margin-left: 25px;
 }
 
 footer {
@@ -28,5 +47,5 @@ footer ul {
 }
 
 footer ul li {
-    display: inline-block
+    display: inline-block;
 }
