--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,19 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Verdana", sans-serif;
+}
+
+a:link {
+    color: #92CCCE;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #b192ce;
 }
 
 header {
@@ -35,36 +49,73 @@ header ul li {
     margin-left: 25px;
 }
 
-/* h2 {
-    display: block;
+/* aside {
+    display: flex;
+    justify-content: space-around;
     float: left;
 } */
 
-#about-me,
-#my-websites {
-    padding: 10%;
+.about-me {
+    display: flex;
+    justify-content: center;
 }
 
-#about-me p {
-    align-self: center;
+.about-me-header {
+    padding: 5%;
+}
+
+p {
+    padding: 30px;
+}
+
+.my-websites {
+    display: flex;
+    justify-content: center;
+}
+
+.my-websites-header {
+    padding: 5%;
+}
+
+#prework-img,
+#refactor {
+    display: inline-block;
+    float: right;
 }
 
 img {
     width: 300px;
     height: 400px;
+    text-align: center;
 }
+
+/* #headshot {
+    width: 150px;
+    height: 200px;
+} */
 
 footer {
     display: flex;
     font-family: "Lucida Console", "Courier New", monospace;
-    background-color: aquamarine;
+    background-color: #31343D;
     flex-wrap: wrap;
+    justify-content: space-around;
+    color: #92CCCE;
+    padding: 13px;
+}
+
+.contact {
+    margin: 10px 20% 10px 0px;
+    padding: 10px 10px 10px 8%;
+    font-size: 20px;
 }
 
 footer ul {
     list-style-type: none;
+    align-self: center;
 }
 
 footer ul li {
     display: inline-block;
+    /* padding: 5px; */
 }
