--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,14 +90,16 @@ p {
     padding: 10px;
 }
 
-/* .my-websites {
+.my-websites {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-} */
+}
 
-/* .my-websites-header {
+.my-websites-header {
     padding: 4%;
-} */
+    margin: 10%;
+}
 
 /* #prework-img,
 #refactor {
@@ -106,9 +108,12 @@ p {
 
 .container {
     position: relative;
+    display: inline-block;
 }
 
-.prework {
+.prework,
+.horiseon,
+.css {
     position: absolute;
     bottom: 8px;
     left: 16px;
@@ -125,7 +130,25 @@ p {
     border: 10px solid #31343D;
 }
 
-.prework
+.refactor-img,
+.css-img {
+    width: 300px;
+    height: 400px;
+    align-self: center;
+    border: 10px solid #31343D;
+    display: inline-block;
+    flex-direction: row;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+}
+
+button:hover {
+    background-color: #E3F2C1;
+    opacity: 0.5;
+}
 
 img {
     width: 300px;
