--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@
 body {
     font-family: "Verdana", sans-serif;
     background-image: linear-gradient(to bottom right, coral, aquamarine);
-    /* background-color: aquamarine; */
 }
 
 a:link {
@@ -181,3 +180,29 @@ footer ul li {
     display: inline-block;
     padding: 11px;
 }
+
+
+/* Tablets - header changes color */
+@media screen and (max-width: 768px) {
+    body {
+        background-image: none;
+        background-color: white;
+    }
+    .prework-img {
+        flex: 2 3 400px;
+    }
+}
+
+  /* Large smartphones - navbar changes color */
+/* @media screen and (max-width: 768px) {
+    nav {
+    background-color: #bb8588;
+    }
+} */
+
+  /* Small smartphones - image placeholders change color */
+/* @media screen and (max-width: 576px) {
+    .sample-img {
+    background-color: #8ac4ff;
+    }
+} */
