--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,27 +88,34 @@ p {
     padding: 10px;
 }
 
-.my-websites {
+/* .my-websites {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+} */
+
+.my-websites-header {
+    padding: 2%;
+    text-align: center;
+}
+
+.container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.my-websites-header {
-    padding: 4%;
-    margin: 4%;
-}
-
-.container {
+.container-item,
+.container-item1 {
     position: relative;
     display: inline-block;
 }
 
-/* .flex-item {
+.flex-item {
     min-height: 150px;
     max-height: 150px;
     flex-shrink: 3;
-} */
+}
 
 .prework,
 .horiseon,
@@ -183,12 +190,8 @@ footer ul li {
 
 
 /* Tablets - header changes color */
-/* @media screen and (max-width: 768px) {
-    body {
-        background-image: none;
-        background-color: white;
+@media screen and (max-width: 768px) {
+    .prework-img {
+        max-width: 300px;
     }
-    .container {
-        flex: 0 3 0;
-    }
-} */
+}
