--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,13 +86,9 @@ header ul li {
 
 p {
     padding: 10px;
+    font-size: 20px;
 }
 
-/* .my-websites {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-} */
 
 .my-websites-header {
     padding: 2%;
@@ -105,21 +101,12 @@ p {
     justify-content: center;
 }
 
-.container-item,
-.container-item1 {
+.container-item {
     position: relative;
     display: inline-block;
 }
 
-.flex-item {
-    min-height: 150px;
-    max-height: 150px;
-    flex-shrink: 3;
-}
-
-.prework,
-.horiseon,
-.css {
+.caption {
     position: absolute;
     bottom: 8px;
     left: 16px;
@@ -132,7 +119,6 @@ p {
 .prework-img {
     width: 800px;
     height: 400px;
-    align-self: center;
     border: 10px solid #31343D;
 }
 
@@ -154,12 +140,6 @@ button {
 button:hover {
     background-color: #E3F2C1;
     opacity: 0.5;
-}
-
-img {
-    width: 300px;
-    height: 400px;
-    text-align: center;
 }
 
 footer {
@@ -189,9 +169,12 @@ footer ul li {
 }
 
 
-/* Tablets - header changes color */
 @media screen and (max-width: 768px) {
     .prework-img {
         max-width: 300px;
+    }
+    header ul {
+        display: flex;
+        flex-direction: column;
     }
 }
